# rustkit-learn

./: .gitignore  Cargo.toml  README.md
docs/: KMeans_Documentation.MD  MSE_Score_Documentation.md  PCA_Documentation.MD  R2_Score_Documentation.md  Ridge_Regression_Documentation.md  Simple_Imputer_Documentation.md  Standard_Scaler_Documentation.md
executable/: Cargo.toml  README.md
executable/src/preprocessing/: mod.rs  simple_imputer.rs  standard_scaler.rs
executable/src/testing/: mod.rs  regression_metrics.rs
python/: environment.yml  output.txt  presentation.ipynb  rustkit_benchmarking.csv  rustkit_benchmarking.py  sklearn_benchmarking.csv  sklearn_benchmarking.py  test.py  timing_log.csv  unit_tests.py
python/env/: environment.yml  req.txt
python/logs/: rustkit_benchmarking.csv  sklearn_benchmarking.csv  timing_log.csv
rustkit/: Cargo.toml  README.md  pyproject.toml
rustkit/docs/: KMeans_Documentation.MD  MSE_Score_Documentation.md  PCA_Documentation.MD  R2_Score_Documentation.md  Ridge_Regression_Documentation.md  Simple_Imputer_Documentation.md  Standard_Scaler_Documentation.md
rustkit/src/: benchmarking.rs  converters.rs  lib.rs  main.rs
rustkit/src/preprocessing/: simple_imputer.rs  standard_scaler.rs
rustkit/src/supervised/: ridge_regression.rs
rustkit/src/testing/: regression_metrics.rs
rustkit/src/unsupervised/: kmeans.rs  pca.rs
src/: main.rs
src/preprocessing/: simple_imputer.rs
src/supervised/: mod.rs
src/testing/: mod.rs  r2_score.rs  regression_metrics.rs
src/unsupervised/: kmeans.rs
(+3 files in other folders)
