[package]
name = "rustkit"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.2"
rand = "0.8"
pyo3 = { version = "0.18", features = ["extension-module"] }
numpy = "0.18"

[lib]
name = "rustkit"
crate-type = ["cdylib"]

[[bin]]
name = "rustkit-cli"  # Renames the binary target
path = "src/main.rs"